# porgy-strategy-editor

./: CMakeLists.txt  CodeEditor.pro  README.md  code-editor-icons.qrc  codeeditorlistview.cpp  codeeditorlistview.h  codeeditorplaintextview.cpp  codeeditorplaintextview.h  codeeditorview.cpp  codeeditorview.h  generalpurposesyntaxhighlighter.cpp  generalpurposesyntaxhighlighter.h  generalpurposesyntaxhighlightingrules.cpp  generalpurposesyntaxhighlightingrules.h  highlightingrule.cpp  highlightingrule.h  mainwindow.cpp  mainwindow.h  sourcecode.cpp  sourcecode.h  sourcecodemodel.cpp  sourcecodemodel.h  xmlsyntaxparser.cpp  xmlsyntaxparser.h
include/: codeeditorlistview.h  codeeditorview.h  generalpurposesyntaxhighlighter.h  highlightingrule.h  mainwindow.h
resources/: code-editor-styles.qrc  code-editor-syntax.qrc
resources/syntax/code-editor/: porgy-script.xsd
sources/: generalpurposesyntaxhighlighter.cpp  generalpurposesyntaxhighlightingrules.cpp  mainwindow.cpp  sourcecode.cpp  sourcecodemodel.cpp
styles/code-editor/listview/items/: listviewitems.qss
styles/code-editor/splitter/: splitter.qss
styles/code-editor/toolbar/: toolbar.qss
styles/code-editor/toolbar/items/: toolbaritems.qss
syntax/code-editor/: porgy-script.xml
ui/: codeeditorview.ui
